# oas-practice

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  health.py  scenarios.py  validation.py
backend/app/models/: __init__.py  scenario.py  validation.py
backend/app/services/: custom_validators.py  scenario_service.py  validation_service.py
backend/scenarios/: components-ref-001.yaml  parameters-path-001.yaml  parameters-query-001.yaml  paths-basic-001.yaml  paths-basic-002.yaml  schemas-object-001.yaml  security-apikey-001.yaml
backend/tests/: conftest.py  test_api.py  test_validation.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/common/: Badge.tsx  Button.tsx  Spinner.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/practice/: EditorPanel.tsx  PracticeView.tsx  ResultsPanel.tsx  ScenarioPanel.tsx
frontend/src/components/scenarios/: DifficultyFilter.tsx  ScenarioBrowser.tsx  ScenarioCard.tsx  TopicFilter.tsx
frontend/src/services/: api.ts  yamlValidator.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
